--- a/src/styles/GameShelf.css
+++ b/src/styles/GameShelf.css
@@ -1,9 +1,9 @@
 .game-shelf {
-  margin-bottom: 3rem;
+  margin-bottom: 1.5rem;
 }
 
 .game-shelf-title {
-  font-size: 1.4rem;
+  font-size: 1.2rem;
   margin-bottom: 1rem;
   font-weight: bold;
 }
@@ -16,8 +16,8 @@
 
   padding-left: 20px;
   padding-right: 20px;
-  padding-top: 20px;
-  padding-bottom: 20px;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 
   margin-left: -20px;
   margin-right: -20px;
